<resources>
    <string name="app_name">Through Sight</string>

    <string name="error_missing_permissions">Some permissions are not granted. Exiting app.</string>
    <string name="action_logout">Logout</string>
    <string name="title_settings">Settings</string>
    <string name="title_profile">Profile</string>
    <string name="msg_detected_text">Recognized text are displayed here</string>
    <string name="title_user_name">User Name</string>
    <string name="title_home_button">Setup Home Locaiton</string>
    <string name="title_guardian_name">Guardian Name</string>
    <string name="action_edit_profile">Edit Profile</string>
    <string name="action_save_profile">Save Profile</string>

    <string name="title_object_detection">Object Detection</string>
    <string name="title_navigation">Navigation</string>
    <string name="title_speech_recognition">Speech Recognition</string>
</resources>
